# Lubezki

./: .gitignore  README.md  get_json.py  main.py  pyproject.toml
backend/: requirements.txt  test.py
backend/app/: __init__.py  main.py
backend/app/api/: __init__.py  basic.py  deps.py  images.py  items.py
backend/app/api/endpoints/: images.py
backend/app/api/routes/: images.py
backend/app/auth/: __init__.py  auth.py
backend/app/core/: config.py  database.py  database_async.py  logging_config.py
backend/app/data_operations/: __init__.py  basic_bucket.py  basic_images.py  buckets.py  images.py  items.py
backend/app/models/: __init__.py  image.py  items.py  model_definitions.py  user.py
backend/app/queries/: images.py  users.py
backend/app/schemas/: __init__.py  image.py  item.py  user.py
backend/app/services/: __init__.py  gemini_service.py  image_service.py  prompt.py  sample_response.json
backend/app/utils/: auth.py  queries.py
frontend/: next.config.ts  package-lock.json  package.json
frontend/src/app/: error.tsx  layout.tsx  loading.tsx  not-found.tsx  page.tsx
frontend/src/components/: CollapsibleUploadPanel.tsx  CompositionItems.tsx  CompositionScorePanel.tsx  CompositionScores.tsx  ImageCard.tsx  ImageGallery.tsx  ImageUpload.tsx  InteractiveTitle.tsx  UploadSummary.tsx  index.ts
frontend/src/services/: api.ts
frontend/src/types/: image.ts
populating_db/: populate.py
utils/: images.py
